# loga

./:    .gitignore  README.md  conlang-spec.md  pyproject.toml
data/: download.sh
docs/: explainer.md  perspective-arxiv-brief-v2.md  perspective-arxiv-brief.md  perspective-arxiv-v2.md  perspective-arxiv.md  perspective-draft.md
eval/: benchmark.py  sparsity.py
tokenizer/: tokenizer_train.py
train/: bitlinear.py  program.md
translator/: translate.py
